# esp-who

./: .gitignore
esp-who-master/: CLAUDE.md
esp-who-master/components/bsp_lichuang/: CMakeLists.txt  Kconfig  bsp_camera.c  bsp_lcd.c  idf_component.yml
esp-who-master/components/bsp_lichuang/include/: bsp_camera.h  bsp_lichuang.h
esp-who-master/components/bsp_lichuang/include/bsp/: esp-bsp.h
esp-who-master/components/who_app/who_app_common/who_detect_result_handle/: who_detect_result_handle.cpp  who_detect_result_handle.hpp
esp-who-master/components/who_app/who_app_common/who_text_result_handle/: who_text_result_handle.hpp
esp-who-master/components/who_app/who_detect_app/: CMakeLists.txt
esp-who-master/components/who_app/who_qrcode_app/: CMakeLists.txt  who_qrcode_app_lcd.hpp
esp-who-master/components/who_app/who_recognition_app/: CMakeLists.txt  who_recognition_app_lcd.cpp  who_recognition_app_lcd.hpp  who_recognition_button.cpp  who_recognition_button.hpp
esp-who-master/components/who_detect/: who_detect.cpp
esp-who-master/components/who_frame_cap/: who_frame_cap_node.cpp
esp-who-master/components/who_frame_lcd_disp/: who_frame_lcd_disp.cpp  who_frame_lcd_disp.hpp
esp-who-master/components/who_peripherals/who_cam/: CMakeLists.txt
esp-who-master/components/who_peripherals/who_lcd/: CMakeLists.txt  who_lvgl_lcd.cpp  who_lvgl_lcd.hpp
esp-who-master/components/who_peripherals/who_lcd/who_lvgl_utils/: who_lvgl_utils.cpp  who_lvgl_utils.hpp
esp-who-master/components/who_task/: who_task_state.cpp
esp-who-master/examples/human_face_recognition/: CMakeLists.txt  sdkconfig.bsp.lichuang
esp-who-master/examples/human_face_recognition/main/: app_main.cpp  idf_component.yml
(+1 files in other folders)
